# StrataForge

./: .gitignore  4D_MONITORING.md  AUTH_QUICK.md  BRANCH_MERGE.md  CHANGELOG.md  CI_CD_FIX.md  CLAUDE.md  Cargo.toml  DEVELOPMENT_KICKOFF.md  GEMINI.md  GITHUB_ACTIONS_ALL_FIXES.md  GITHUB_MCP_INSTALL.md  GITHUB_PROJECTS_SETUP.md  GITHUB_SETUP.md  GLOBAL_MCP_INSTALL.md  Gemfile  PHASE_1_FEATURES.md  PHASE_2_FEATURES.md  PRODUCTION_READINESS.md  PUSH_INSTRUCTIONS.md  QUICKSTART.md  README.md  RELEASE_NOTES_v0.3.0.md  SECURITY.md  _config.yml  dist-workspace.toml  dxdiag_output.txt  index.html  index.md  ml_auto_tracking.md  plugin_development.md  pyproject.toml  seismic_attributes.md  style.css
.beads/context/: execution-state.md  project-context.md
.cargo/: config.toml
.claude/: settings.local.json
.github/: ISSUE_TEMPLATES.md  PROJECT_BOARD_SETUP.md  dependabot.yml
.github/workflows/: ci-cd.yml  ci.yml  deploy-docs.yml  deploy-github-pages.yml  deploy-pages.yml  docs-pages.yml  qwen-code.yml  qwen-dispatch.yml  qwen-scheduled-triage.yml  qwen-triage.yml  release.yml
.mcp/: cursor-everything.json  gemini-cli-everything.json  qwen-code-everything.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.1-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md
.planning/phases/: phase-2-integration-01-foundation-PLAN.md  phase-2-integration-PLAN.md
.planning/phases/v04-phase-a-structural-foundations/: v04-phase-a-structural-foundations-SUMMARY.md
.planning/phases/v1.2-compilation/: v1.2-001-compile-rust-app-PLAN.md
.planning/reports/: progress-2026-03-28-updated.md
benches/: Cargo.toml  gpu_vs_cpu.rs  phase1_benchmarks.rs  phase2_benchmarks.rs
crates/seisly_4d/: Cargo.toml
crates/seisly_app/: Cargo.toml
crates/seisly_attributes/: Cargo.toml
crates/seisly_attributes_gpu/: Cargo.toml
crates/seisly_cli/: Cargo.toml
crates/seisly_cli/src/: main.rs
crates/seisly_cli/src/commands/: import.rs  init.rs  list.rs
crates/seisly_cli/wix/: main.wxs
crates/seisly_compute/: Cargo.toml
crates/seisly_compute/src/: clipping.rs  interpolation.rs  lib.rs  resampling.rs  seismic.rs  throw.rs  triangulation.rs  well_tie.rs
crates/seisly_compute/tests/: well_tie_integration_test.rs  well_tie_test.rs
crates/seisly_core/: Cargo.toml
crates/seisly_core/proto/: analysis.proto
crates/seisly_core/src/: lib.rs  seismic.rs
crates/seisly_core/src/domain/: surface.rs  trajectory.rs  well.rs
crates/seisly_core/src/io/: mod.rs  safe_mmap.rs
crates/seisly_core/src/ipc/: mod.rs  shm.rs
crates/seisly_crs/: Cargo.toml
crates/seisly_fwi/: Cargo.toml
crates/seisly_io/: Cargo.toml
crates/seisly_ml/: Cargo.toml
crates/seisly_ml_deep/: Cargo.toml
crates/seisly_plugin/: Cargo.toml
crates/seisly_production/: Cargo.toml
crates/seisly_production/src/: ccus.rs  surveillance.rs  well_planning.rs
crates/seisly_py_worker/: Cargo.toml
crates/seisly_qi/: Cargo.toml
crates/seisly_qi/src/: fluid.rs
crates/seisly_qi/tests/: qi_integration_test.rs
crates/seisly_render/: Cargo.toml
crates/seisly_storage/: Cargo.toml
crates/seisly_storage/src/: lib.rs  project.rs
crates/seisly_storage/src/blob/: mod.rs
crates/seisly_tracking/: Cargo.toml
crates/seisly_tracking/src/: fault_guided.rs  multi_horizon.rs  quality.rs
crates/sf_app/: Cargo.toml
crates/sf_compute/: Cargo.toml
crates/sf_io/: Cargo.toml
crates/sf_plugin/: Cargo.toml
docs/: GPU_ACCELERATION.md  QI_GUIDE.md  README.md  _config.yml  architecture.md  index.md  roadmap.md
docs/api/: README.md
docs/design/: ui-redesign-spec.md
docs/development/: plugin-development.md
docs/features/: 4d-monitoring.md  ml-auto-tracking.md  quantitative-interpretation.md  seismic-attributes.md
docs/getting-started/: quickstart.md
docs/libraries/: README.md  egui_eframe.md  memmap2.md  nalgebra.md  spade.md  tonic_prost.md  wgpu.md
docs/roadmap/: blueprint.md  roadmap.md
docs/technical/: gpu-acceleration.md  project-format.md
docs/user-manual/: book.toml
plugins/mock_horizon/: manifest.yaml
python/examples/: basic_usage.py
python/seisly/: __init__.py
python/stratforge/: __init__.py
schemas/sqlite/: 0001_init.sql
scripts/: generate-docs.py  generate_docs.sh
tests/: phase1_integration_test.rs  phase2_4d_test.rs  phase2_qi_test.rs
(+148 files in other folders)
