[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "seisly"
version = "0.3.0"
description = "Python bindings for Seisly seismic interpretation platform"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "seisly.seisly"
