[package]
name = "seisly-benches"
version = "0.4.0"
edition = "2021"
publish = false

[dependencies]
criterion = "0.5"
seisly_ml = { path = "../crates/seisly_ml" }
seisly_attributes = { path = "../crates/seisly_attributes" }
seisly_qi = { path = "../crates/seisly_qi" }
seisly_4d = { path = "../crates/seisly_4d" }

[[bench]]
name = "phase1_benchmarks"
harness = false

[[bench]]
name = "phase2_benchmarks"
harness = false

[[bench]]
name = "gpu_vs_cpu"
harness = false
