[package]
name = "seisly_cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sf"
path = "src/main.rs"

[dependencies]
seisly_core.workspace = true
seisly_storage.workspace = true
seisly_io.workspace = true
seisly_compute.workspace = true
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
uuid.workspace = true
