[package]
name = "seisly_compute"
version.workspace = true
edition.workspace = true

[dependencies]
seisly_core.workspace = true
seisly_io.workspace = true
spade.workspace = true
thiserror.workspace = true
nalgebra.workspace = true
uuid.workspace = true
rand = "0.8"

[dev-dependencies]
tempfile.workspace = true
