[package]
name = "seisly_core"
version.workspace = true
edition.workspace = true

[dependencies]
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
shared_memory.workspace = true
memmap2 = "0.9"

[dev-dependencies]
tempfile.workspace = true
